<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_brand_pattern"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/topAppBar"
        layout="@layout/partial_top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_md"
            android:paddingEnd="@dimen/spacing_md"
            android:paddingTop="@dimen/spacing_md"
            android:paddingBottom="@dimen/spacing_lg">

            <include
                android:id="@+id/stepper"
                layout="@layout/partial_stepper_progress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/selectDate_title"
                android:textAppearance="@style/TextAppearance.DonaVida.Subtitle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxs"
                android:text="@string/selectDate_subtitle"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/calendarHeaderRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg">

                <TextView
                    android:id="@+id/calendarMonthLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/selectDate_month_label"
                    android:textAppearance="@style/TextAppearance.DonaVida.Subtitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/calendarNextMonth"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/calendarPrevMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_sm"
                    android:text="@string/selectDate_prev_month"
                    android:textAppearance="@style/TextAppearance.DonaVida.Body"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/calendarNextMonth"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/calendarNextMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selectDate_next_month"
                    android:textAppearance="@style/TextAppearance.DonaVida.Body"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/calendarWeekdayRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:orientation="horizontal">

                <TextView style="@style/DonaVida.Calendar.WeekdayLabel" android:text="@string/selectDate_weekday_mon" />
                <TextView style="@style/DonaVida.Calendar.WeekdayLabel" android:text="@string/selectDate_weekday_tue" />
                <TextView style="@style/DonaVida.Calendar.WeekdayLabel" android:text="@string/selectDate_weekday_wed" />
                <TextView style="@style/DonaVida.Calendar.WeekdayLabel" android:text="@string/selectDate_weekday_thu" />
                <TextView style="@style/DonaVida.Calendar.WeekdayLabel" android:text="@string/selectDate_weekday_fri" />
                <TextView style="@style/DonaVida.Calendar.WeekdayLabel" android:text="@string/selectDate_weekday_sat" />
                <TextView style="@style/DonaVida.Calendar.WeekdayLabel" android:text="@string/selectDate_weekday_sun" />

            </LinearLayout>

            <GridLayout
                android:id="@+id/calendarGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                android:columnCount="7" />

            <include
                android:id="@+id/note"
                layout="@layout/partial_info_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md" />

            <include
                android:id="@+id/sectionMoreSlots"
                layout="@layout/partial_section_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md" />

            <RadioGroup
                android:id="@+id/quickDateOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/dateOption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:minHeight="@dimen/button_min_height"
                    android:text="@string/selectDate_option1"
                    android:textAppearance="@style/TextAppearance.DonaVida.Body" />

                <RadioButton
                    android:id="@+id/dateOption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:minHeight="@dimen/button_min_height"
                    android:text="@string/selectDate_option2"
                    android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            </RadioGroup>

            <Button
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/selectDate_continue_button"
                style="@style/Widget.DonaVida.Button.Primary" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
