<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_brand_pattern"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/topAppBar"
            layout="@layout/partial_top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loginWelcomeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginEnd="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/login_welcome_title"
            android:textAppearance="@style/TextAppearance.DonaVida.Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAppBar"
            app:layout_constraintWidth_max="@dimen/content_max_width" />

        <TextView
            android:id="@+id/loginWelcomeSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginEnd="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_xxs"
            android:layout_marginBottom="@dimen/spacing_sm"
            android:text="@string/login_welcome_subtitle"
            android:textAppearance="@style/TextAppearance.DonaVida.Body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginWelcomeTitle"
            app:layout_constraintWidth_max="@dimen/content_max_width" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/superior">

        <LinearLayout
            android:id="@+id/inferior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_md"
            android:paddingEnd="@dimen/spacing_md"
            android:paddingBottom="@dimen/spacing_lg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="3dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="@dimen/spacing_xs"
                    android:background="@drawable/bg_section_marker" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_section_access"
                    android:textAppearance="@style/TextAppearance.DonaVida.Subtitle" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_label"
                style="@style/Widget.DonaVida.TextInputLayout"
                app:placeholderText="@string/login_email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="@string/login_password_label"
                style="@style/Widget.DonaVida.TextInputLayout"
                app:placeholderText="@string/login_password_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/rememberSessionCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/login_remember_checkbox"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/login_forgot_password"
                style="@style/Widget.DonaVida.Button.Borderless" />

            <Button
                android:id="@+id/loginSubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                android:text="@string/login_submit_button"
                style="@style/Widget.DonaVida.Button.Primary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:background="@drawable/bg_note_informativa"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_sm">

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/spacing_sm"
                    android:background="@drawable/bg_accent_bar_note" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="@dimen/spacing_xs"
                    android:contentDescription="@string/cd_icon_info"
                    android:src="@drawable/ic_info"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_attempts_note"
                    android:textAppearance="@style/TextAppearance.DonaVida.Body" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_lg"
                android:background="@color/colorIconSoftFill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:gravity="center"
                android:text="@string/login_no_account"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:text="@string/login_register_button"
                style="@style/Widget.DonaVida.Button.Secondary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:gravity="center"
                android:text="@string/login_footer_note"
                android:textAppearance="@style/TextAppearance.DonaVida.Caption" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
