<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_brand_pattern"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/topAppBar"
        layout="@layout/partial_top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_md"
            android:paddingEnd="@dimen/spacing_md"
            android:paddingTop="@dimen/spacing_md"
            android:paddingBottom="@dimen/spacing_lg">

            <include
                android:id="@+id/stepper"
                layout="@layout/partial_stepper_progress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/verifyEligibility_title"
                android:textAppearance="@style/TextAppearance.DonaVida.Subtitle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxs"
                android:text="@string/verifyEligibility_subtitle"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <CheckBox
                android:id="@+id/check1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:buttonTint="@color/colorBorder"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/verifyEligibility_check1"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <CheckBox
                android:id="@+id/check2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBorder"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/verifyEligibility_check2"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <CheckBox
                android:id="@+id/check3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBorder"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/verifyEligibility_check3"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <CheckBox
                android:id="@+id/check4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBorder"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/verifyEligibility_check4"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <CheckBox
                android:id="@+id/check5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBorder"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/verifyEligibility_check5"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <CheckBox
                android:id="@+id/check6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBorder"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/verifyEligibility_check6"
                android:textAppearance="@style/TextAppearance.DonaVida.Body" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_xs"
                android:background="@color/colorIconSoftFill" />

            <include
                android:id="@+id/note"
                layout="@layout/partial_info_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md" />

            <Button
                android:id="@+id/verifyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/verifyEligibility_verify_button"
                style="@style/Widget.DonaVida.Button.Primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:gravity="center"
                android:text="@string/verifyEligibility_confidential_caption"
                android:textAppearance="@style/TextAppearance.DonaVida.Caption" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
